tests/src/frontend/typechecking/exhaustiveness/invalid/child_override_overlapping.sk
base class A(f: Bool)
class C(b: Int, c: Bool) extends A
class B extends A

fun myMatch(b: A): String {
  b match {
  | A(false) -> "0"
  | B(true) -> "1"
  | C(_, _, true) -> "2"
  | A(true) -> "3"
  }
}
